# pymobbin

./: .gitignore  README.md  pyproject.toml
examples/: auth_flow.py  fetch_web_apps.py  test_client_refactor.py
src/pymobbin/: __init__.py  client.py  constants.py  models.py
tests/: test_client.py
