[project]
name = "pymobbin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jonksar", email = "joonatan.samuel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "polars>=1.36.1",
]

[project.scripts]
pymobbin = "pymobbin:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "complexipy>=5.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.14.10",
]
